--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -27,7 +27,7 @@ const work = await Promise.all(
           work.map(entry => (
             <li class="animate">
               <div class="text-sm opacity-75">
-                {dateRange(entry.data.dateStart, entry.data.dateEnd)}
+                {entry.data.dateLabel}
               </div>
               <div class="font-semibold text-black dark:text-white">
                 {entry.data.company}
