--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -10,10 +10,11 @@ type Props = {
 };
 
 const { title, description } = Astro.props;
+const currentLang = Astro.currentLocale || 'es';
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang={currentLang}>
   <head>
     <Head title={`${title} | ${SITE.NAME}`} description={description} />
   </head>
