--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -4,11 +4,14 @@ import PageLayout from "@layouts/PageLayout.astro";
 import Container from "@components/Container.astro";
 import ArrowCard from "@components/ArrowCard.astro";
 import { getBlogMetadata } from "@i18n/metadata";
+import { getLang } from "@lib/utils";
+import { useTranslation } from "@i18n/utils";
 
 
 
-const lang = Astro.currentLocale || 'en';
-const metadata = getBlogMetadata(lang as keyof typeof getBlogMetadata);
+const lang = getLang(Astro.currentLocale);
+const translateLabels = useTranslation(lang);
+const metadata = getBlogMetadata(lang);
 
 const data = (await getCollection("blog"))
   .filter(post => !post.data.draft)
@@ -40,8 +43,8 @@ export async function getStaticPaths() {
 <PageLayout title={metadata.TITLE} description={metadata.DESCRIPTION}>
   <Container>
     <div class="space-y-10">
-      <div class="animate font-semibold text-black dark:text-white">
-        Blog
+      <div class="animate font-semibold text-black dark:text-white uppercase tracking-widest text-sm opacity-50">
+        {translateLabels("nav.blog")}
       </div>
       <div class="space-y-4">
         {years.map(year => (
