--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -31,12 +31,11 @@ const blog = SHOW_LATEST_POSTS
     .slice(0,SITE.NUM_POSTS_ON_HOMEPAGE)
   : [];
 
-const projects = (await getCollection("projects"))
-  .filter(project => !project.data.draft)
+const projects = (await getCollection("projects", ({ data }) => !data.draft && data.lang === lang))
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
   .slice(0,SITE.NUM_PROJECTS_ON_HOMEPAGE);
 
-const allwork = (await getCollection("work"))
+const allwork = (await getCollection("work", ({ data }) => data.lang === lang))
   .sort((a, b) => new Date(b.data.dateStart).valueOf() - new Date(a.data.dateStart).valueOf())
   .slice(0,SITE.NUM_WORKS_ON_HOMEPAGE);
 
