--- a/src/pages/[lang]/projects/[...slug].astro
+++ b/src/pages/[lang]/projects/[...slug].astro
@@ -8,25 +8,27 @@ import BackToPrev from "@components/BackToPrev.astro";
 import Link from "@components/Link.astro";
 import { getRelativeLocaleUrl } from "astro:i18n";
 import { getLang } from "@lib/utils";
+import { useTranslation } from "@i18n/utils";
 
 export async function getStaticPaths() {
   const projects = (await getCollection("projects"))
     .filter(post => !post.data.draft)
     .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
-  return projects.flatMap(project => [
-    {
-      params: { lang: "es", slug: project.slug },
+  
+  return projects.map(project => {
+    // slug is format "[lang]/[project-id]"
+    const [lang, ...slugParts] = project.slug.split('/');
+    const slug = slugParts.join('/');
+    return {
+      params: { lang, slug },
       props: project,
-    },
-    {
-      params: { lang: "en", slug: project.slug },
-      props: project,
-    },
-  ]);
+    };
+  });
 }
 type Props = CollectionEntry<"projects">;
 
 const lang = getLang(Astro.currentLocale);
+const t = useTranslation(lang);
 const project = Astro.props;
 const { Content } = await project.render();
 ---
@@ -35,7 +37,7 @@ const { Content } = await project.render();
   <Container>
     <div class="animate">
       <BackToPrev href={getRelativeLocaleUrl(lang, "projects")}>
-        Back to projects
+        {t("projects.back")}
       </BackToPrev>
     </div>
     <div class="space-y-1 my-10">
